Fix sizing and spacing

--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ nav {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	padding: 100px 0;
+	padding: 80px 0 100px 0;
 	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
 		Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 	color: rgb(76, 76, 76);
@@ -122,8 +122,8 @@ nav {
 
 .voting {
 	display: flex;
-	padding: 80px 200px;
-	gap: 70px;
+	padding: 80px 180px 60px 180px;
+	gap: 90px;
 	background-color: #f5d8e3;
 	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
 		Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -136,16 +136,17 @@ nav {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	gap: 7px;
 }
 
 .voting h3 {
-	font-size: 2rem;
+	font-size: 1.6rem;
 	margin: 20px 0 10px 0;
 	text-transform: uppercase;
 }
 
 .voting p {
-	font-size: 1.2rem;
+	font-size: 1.1rem;
 	margin: 0;
 }
 
@@ -154,12 +155,12 @@ nav {
 }
 
 .voting button {
-	margin: 20px 0;
+	margin: 25px 0;
 	padding: 8px 30px;
 	background-color: #8a59cb;
 	border: none;
 	border-radius: 5px;
-	font-size: 0.8rem;
+	font-size: 0.9rem;
 	color: white;
 	font-weight: 600;
 }
@@ -171,12 +172,13 @@ nav {
 .comments {
 	display: flex;
 	flex-direction: column;
+	justify-content: center;
 	align-items: center;
 	text-align: center;
 	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
 		Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 	color: rgb(76, 76, 76);
-	padding: 80px 25%;
+	padding: 60px 0 100px 0;
 }
 
 .comments h2 {
@@ -186,15 +188,16 @@ nav {
 
 .comments p {
 	font-size: 1rem;
+	width: 60%;
 }
 
 .comments button {
 	border-style: none;
 	background-color: #e58bae;
 	border-radius: 20px;
-	padding: 8px 20px;
+	padding: 10px 20px;
 	font-size: 0.8rem;
-	margin-top: 15px;
+	margin-top: 30px;
 	color: white;
 	font-weight: 500;
 }
